--- a/app/src/main/res/layout/list_item_url_parser.xml
+++ b/app/src/main/res/layout/list_item_url_parser.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -47,6 +47,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/listItem_urlParser_codeType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
@@ -71,6 +72,7 @@
             style="@style/ImageButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             app:srcCompat="@drawable/ic_delete" />
     </LinearLayout>
 </FrameLayout>
