--- a/app/src/main/res/layout/dialog_settings_video.xml
+++ b/app/src/main/res/layout/dialog_settings_video.xml
@@ -129,7 +129,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="URLs Zerlegen"
+                    android:text="URLs Auswerten"
                     android:textStyle="bold" />
 
                 <LinearLayout
