Random Shortcut volländet

--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -25,7 +25,7 @@
         </SearchView>
 
         <View
-            android:id="@+id/videos_divider"
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider"
