--- a/app/src/main/res/layout/activity_joke.xml
+++ b/app/src/main/res/layout/activity_joke.xml
@@ -23,6 +23,7 @@
     </SearchView>
 
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
