--- a/app/src/main/res/layout/activity_owe.xml
+++ b/app/src/main/res/layout/activity_owe.xml
@@ -35,8 +35,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@id/videos_divider" />
+            android:layout_height="match_parent"/>
 
         <TextView
             android:id="@+id/no_item"
