--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -121,79 +121,6 @@
                 android:textStyle="bold" />
 
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Nutzer"-->
-<!--                        android:textStyle="bold" />-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Welcher Depp ist gerade angemeldet?"-->
-<!--                        android:textSize="12sp" />-->
-<!--                </LinearLayout>-->
-
-<!--                <Spinner-->
-<!--                    android:id="@+id/settings_others_users"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent" />-->
-<!--            </LinearLayout>-->
-
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:layout_marginVertical="5dp"-->
-<!--                android:background="?android:attr/listDivider" />-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Dark-Mode"-->
-<!--                        android:textStyle="bold" />-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Soll der Dark-Mode systemabhängig, immer, oder gar nicht angezeigt werden?"-->
-<!--                        android:textSize="12sp" />-->
-<!--                </LinearLayout>-->
-
-<!--                <Spinner-->
-<!--                    android:id="@+id/settings_others_darkMode"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:entries="@array/settings_others_darkMode"/>-->
-<!--            </LinearLayout>-->
-
-<!--            <View-->
-<!--                android:id="@+id/view"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:layout_marginVertical="5dp"-->
-<!--                android:background="?android:attr/listDivider" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -351,88 +278,62 @@
 
             </LinearLayout>
 
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:gravity="center_vertical"-->
-<!--                android:orientation="vertical">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Update"-->
-<!--                    android:textStyle="bold" />-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:gravity="center_vertical"-->
-<!--                    android:orientation="horizontal">-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="5dp"
+                android:background="?android:attr/listDivider" />
 
 
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:orientation="vertical">-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Nach neuerer Version Suchen und updaten"-->
-<!--                            android:textSize="12sp" />-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-<!--                        <LinearLayout-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:gravity="center_vertical"-->
-<!--                            android:orientation="horizontal">-->
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Shortcuts"
+                        android:textStyle="bold" />
 
-<!--                            <TextView-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_marginRight="5dp"-->
-<!--                                android:text="Aktuelle Version:"-->
-<!--                                android:textSize="12sp"-->
-<!--                                android:textStyle="italic" />-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
 
-<!--                            <TextView-->
-<!--                                android:id="@+id/settings_others_version"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_marginRight="8dp"-->
-<!--                                android:textSize="12sp"-->
-<!--                                android:textStyle="italic"-->
-<!--                                tools:text="1.1" />-->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
 
-<!--                            <TextView-->
-<!--                                android:id="@+id/settings_others_changeLog"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_gravity="center_horizontal"-->
-<!--                                android:clickable="true"-->
-<!--                                android:foreground="@drawable/ripple"-->
-<!--                                android:padding="5dp"-->
-<!--                                android:text="Change-Log"-->
-<!--                                android:textColor="@color/colorAccent"-->
-<!--                                android:textSize="12sp"-->
-<!--                                android:textStyle="italic" />-->
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Shortcuts auswählen und hinzufügen"
+                                android:textSize="12sp" />
 
-<!--                        </LinearLayout>-->
+                        </LinearLayout>
 
-<!--                    </LinearLayout>-->
+                    </LinearLayout>
+                </LinearLayout>
 
-<!--                    <Button-->
-<!--                        android:id="@+id/settings_others_checkForUpdate"-->
-<!--                        style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Auf Updates \nüberprüfen" />-->
-<!--                </LinearLayout>-->
+                <Button
+                    android:id="@+id/settings_others_showShortcuts"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Anzeigen" />
 
-<!--            </LinearLayout>-->
+            </LinearLayout>
 
         </LinearLayout>
 
