--- a/app/src/main/res/layout/dialog_edit_or_add_url_parser.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_url_parser.xml
@@ -69,7 +69,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/dialog_editOrAdd_urlParser_variables"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Verfügbare Variablen: url, result, split, last, lastSplit, customList"
