--- a/app/src/main/res/layout/dialog_edit_or_add_url_parser.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_url_parser.xml
@@ -74,6 +74,8 @@
         android:layout_height="wrap_content"
         android:text="Verfügbare Variablen: url, result, split, last, lastSplit, customList"
         android:textSize="10sp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </LinearLayout>
