--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -24,6 +24,7 @@
         tools:text="1" />
 
     <LinearLayout
+        android:id="@+id/listItem_episode_detailLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
