--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,8 +19,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="8dp"
                 android:text="Bereiche"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold" />
@@ -29,78 +29,77 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/settings_spaces_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
-<!--        <View-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="3dp"-->
-<!--            android:background="?android:attr/listDivider" />-->
+        <!--        <View-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="3dp"-->
+        <!--            android:background="?android:attr/listDivider" />-->
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_margin="16dp"-->
-<!--            android:orientation="vertical">-->
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_margin="16dp"-->
+        <!--            android:orientation="vertical">-->
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                android:text="Finanzen"-->
-<!--                android:textColor="@color/colorPrimary"-->
-<!--                android:textStyle="bold" />-->
+        <!--            <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginBottom="8dp"-->
+        <!--                android:text="Finanzen"-->
+        <!--                android:textColor="@color/colorPrimary"-->
+        <!--                android:textStyle="bold" />-->
 
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:gravity="bottom"-->
-<!--                android:orientation="horizontal">-->
+        <!--            <LinearLayout-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="match_parent"-->
+        <!--                android:gravity="bottom"-->
+        <!--                android:orientation="horizontal">-->
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:orientation="vertical">-->
+        <!--                <LinearLayout-->
+        <!--                    android:layout_width="wrap_content"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:layout_weight="1"-->
+        <!--                    android:orientation="vertical">-->
 
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Beschriftung Vertauschen"-->
-<!--                        android:textStyle="bold" />-->
+        <!--                    <TextView-->
+        <!--                        android:layout_width="match_parent"-->
+        <!--                        android:layout_height="wrap_content"-->
+        <!--                        android:text="Beschriftung Vertauschen"-->
+        <!--                        android:textStyle="bold" />-->
 
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:orientation="horizontal">-->
+        <!--                    <LinearLayout-->
+        <!--                        android:layout_width="match_parent"-->
+        <!--                        android:layout_height="wrap_content"-->
+        <!--                        android:orientation="horizontal">-->
 
-<!--                        <FrameLayout-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_weight="1">-->
+        <!--                        <FrameLayout-->
+        <!--                            android:layout_width="match_parent"-->
+        <!--                            android:layout_height="wrap_content"-->
+        <!--                            android:layout_weight="1">-->
 
-<!--                            <TextView-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:text="Bei fremden Einkäufen die Markierungen für 'Eigen' und 'Fremd' vertauschen"-->
-<!--                                android:textSize="12sp" />-->
-<!--                        </FrameLayout>-->
+        <!--                            <TextView-->
+        <!--                                android:layout_width="wrap_content"-->
+        <!--                                android:layout_height="wrap_content"-->
+        <!--                                android:text="Bei fremden Einkäufen die Markierungen für 'Eigen' und 'Fremd' vertauschen"-->
+        <!--                                android:textSize="12sp" />-->
+        <!--                        </FrameLayout>-->
 
-<!--                        <Switch-->
-<!--                            android:id="@+id/settings_finances_swapLables"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginLeft="8dp" />-->
-<!--                    </LinearLayout>-->
+        <!--                        <Switch-->
+        <!--                            android:id="@+id/settings_finances_swapLables"-->
+        <!--                            android:layout_width="wrap_content"-->
+        <!--                            android:layout_height="wrap_content"-->
+        <!--                            android:layout_marginLeft="8dp" />-->
+        <!--                    </LinearLayout>-->
 
-<!--                </LinearLayout>-->
+        <!--                </LinearLayout>-->
 
-<!--            </LinearLayout>-->
+        <!--            </LinearLayout>-->
 
-<!--        </LinearLayout>-->
-
+        <!--        </LinearLayout>-->
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
@@ -120,25 +119,30 @@
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold" />
 
-
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Datenbank-Code"
+                        android:text="Datenbank"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Datenbank-Code ändern, Datenbank-Code umbenennen, Passwort ändern, oder Datenbank löschen"
+                        android:textSize="12sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -162,19 +166,21 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/settings_others_changeDatabaseCode"
+                    android:id="@+id/settings_others_datebaseSettings"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Ändern" />
+                    android:text="Anzeigen" />
 
             </LinearLayout>
 
             <View
+
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginVertical="5dp"
                 android:background="?android:attr/listDivider" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -369,7 +375,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Nach neuerer Version Suchen und updaten"
+                            android:text="Nach neuerer Version Suchen und Updaten"
                             android:textSize="12sp" />
 
                         <LinearLayout
@@ -422,7 +428,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
 
 
         </LinearLayout>
