--- a/app/src/main/res/layout/list_item_space_setting.xml
+++ b/app/src/main/res/layout/list_item_space_setting.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:paddingVertical="8dp"
+    android:paddingHorizontal="16dp">
 
     <TextView
         android:id="@+id/list_spaceSetting_name"
@@ -18,6 +20,7 @@
 
     <ImageView
         android:id="@+id/list_spaceSetting_lock"
+        style="@style/ImageButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
