--- a/app/src/main/res/layout/list_item_knowledge.xml
+++ b/app/src/main/res/layout/list_item_knowledge.xml
@@ -36,12 +36,12 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="8dp"
-                        android:text="Titel:"
-                        android:textStyle="bold" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginRight="8dp"-->
+<!--                        android:text="Titel:"-->
+<!--                        android:textStyle="bold" />-->
 
                     <TextView
                         android:id="@+id/listItem_knowledge_title"
@@ -49,6 +49,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:maxLines="2"
+                        style="@style/CaptionStyle"
                         tools:text="Test" />
                 </LinearLayout>
 
