--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -46,12 +46,12 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="8dp"
-                        android:text="Titel:"
-                        android:textStyle="bold" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginRight="8dp"-->
+<!--                        android:text="Titel:"-->
+<!--                        android:textStyle="bold" />-->
 
                     <TextView
                         android:id="@+id/listItem_video_Titel"
@@ -59,6 +59,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:maxLines="2"
+                        style="@style/CaptionStyle"
                         android:text="Name1" />
                 </LinearLayout>
 
