--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryLeight"
+        android:background="@color/colorPrimaryLight"
         android:gravity="bottom"
         android:orientation="horizontal"
         android:padding="16dp">
