--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryLeight">#FFD03F</color>
+    <color name="colorPrimaryLight">#FFD03F</color>
     <color name="colorPrimary">#FFB300</color>
     <color name="colorPrimaryDark">#FB8C00</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorAccentLight">#D982A2</color>
     <color name="colorDivider">#D7D8DD</color>
 
     <color name="colorGreen">#4CAF50</color>
